[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redsnano"
version = "0.1.0"
description = "Mini Redis-like cache with hash validation against origin data sources."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MWIMULE BIENVENU", email = "mwimulebienvenu05@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "fastapi>=0.111", "httpx>=0.27"]
api = ["fastapi>=0.111", "uvicorn>=0.30"]

[project.scripts]
redsnano-server = "redsnano.cli:run_server"

